--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     </div> <!--End Header-->
     <div class="content">
         <div class="index-column index-column--sub">
-            <h2 class="index-column__title">성명</h2>
+            <h2 class="index-column__title">
+                <a href="http://naver.com">Statement</a>
+            </h2>
             <ul>
                 <li class="main-article">
                     <div class="main-article__title">한상균 위원장의 노동부 장관 이기권 면담을 앞두고</div>
@@ -60,7 +62,7 @@
                         <div style="color: #999;"><small>이렇게 생각한다</small></div>
                         형식적이고 일회적인 투쟁으로는 박근혜를 막을 수 없다
                     </div>
-                    <img />
+                    <img />S
                     <p>박근혜 정부가 더 쉬운 해고, 더 낮은 임금을 강요하자 결국 온건한 한국노총 지도부마저 노사정위 협상장을...</p>
                 </li>
                 <li></li>
@@ -70,7 +72,20 @@
                 <li></li>
             </ul>
         </div>
-
     </div>
+        <div class="e-content  base-spacing" style="clear: both">
+            <p>오늘 오후 민주노총 한상균 위원장이 노동부 장관 이기권을 면담한다.</p>
+            <p>민주노총은 어제 보도자료를 내 면담 일정을 공개하면서 “총파업을 내건 민주노총의 요구와 경고의 메시지를 분명히 전달하는 자리가 될 것”이라고 밝혔다.</p>
+            <p>한상균 집행부는 총파업 보도조차 제대로 이뤄지지 않는 상황에서, 언론의 조명을 받을 이기권과의 면담을 총파업과 민주노총 요구 여론화의 수단으로 여긴 듯하다.</p>
+            <p>그러나 민주노총이 기성 주류 언론들을 이용해 언론 플레이를 할 수 있다고 기대한다면 그것은 환상일 것이다. 언론을 주무르는 것은 우리가 아니라 정부와 기업주들이다. 또, 정부 장관이나 여야 정치인 모두 자본주의적 국가 기관의 일부로, 우리가 활용할 수 있는 중립 지대가 결코 아니다.</p>
+            <p>게다가 현 시점에서 노동부 장관과 면담을 추진한 것도 여러 모로 부적절하다. 우선, 민주노총은 정부가 2013년 말 민주노총 본부를 침탈한 이래 노동부 장관 만남을 거부해 왔고, 한상균 집행부 역시 “노동자 죽이기 정책을 연이어 쏟아 내는 정부와 예방 차원의 만남은 무의미하다”며 만남을 거부해 왔다. 과연 무엇이 달라졌는지 의문이 아닐 수 없다.</p>
+            <p>둘째, 정부가 노사정위와 대타협기구 합의 시한을 앞두고 노동시장 구조 개악과 공무원연금 개악에 속도를 내는 와중에 노동부 장관과 마주앉는 것이어서, 대화로 이 사안에 대한 해법을 모색할 의사가 있는 것처럼 비춰질 수 있다. 민주노총 임원들이 이런 생각을 전혀 하지 않더라도 언론은 얼마든지 사진 한 장의 연출로 마치 정부가 민주노총의 의견도 수렴한 듯이 언론 플레이를 할 수 있다.</p>
+            <p>셋째, 노동부 장관 이기권은 총파업을 앞두고 민주노총 산하 노조 지도자들을 개별 접촉해 압박과 회유를 해 왔다. 지난주에는 이경훈 현대차 지부장을 만나 노동시장 구조 개악에 협조를 구하려다 이 지부장의 만남 거절로 아예 울산 방문을 취소한 통쾌한 일도 있었다. 이런 상황에서는 노동부 장관의 민주노총 조직 교란 행위를 비난하고, 민주노총 산하 모든 노조 지도자들에게 노동부 장관과 개별 접촉을 하지 말라고 촉구하는 게 옳을 것이다.</p>
+            <p>넷째, 무엇보다 지금은 총파업을 앞두고 조직화가 한창인 시점이다. 민주노총 임원들이 현장 순회를 하며 진정성 있게 파업을 호소하면서 현장 분위기가 조금씩 올라오는 상황이다. 그런데 이럴 때 민주노총 위원장이 노동부 장관을 만나면 현장 조합원들은 지도부가 무엇을 하려는 것인지 혼란스럽고 지도부의 투쟁 의지에 의구심을 갖게 될 수 있다. 조합원들은 노조 지도자들이 투쟁을 앞두고 장관이나 여야 정치권을 접촉하는 광경을 처음 보는 게 아니다.</p>
+            <p>한상균 위원장의 투쟁 의지는 잘 알려져 있지만, 객관적으로 검증돼야 할 일이다. 조합원들이 알 수 있는 것은 지도부의 속마음이 아니라 객관적 행위와 그것이 낳는 파장이라는 점을 민주노총 임원들은 헤아려야 한다.</p>
+            <p>직선제 선거에서 다수 조합원들이 한상균을 택한 것은 현란한 말도, 협상 수완도 아닌, 투박한 전투성 때문이었음을 새삼 떠올려 본다. 지금은 바로 이 모습으로 현장 조합원들에게 호소하며 총파업을 조직할 때다.</p>
+        </div>
 </body>
 </html>
+
+
