검증 폼 추가.(다음 우편번호와 자바스크립트->jQuery로)

--- a/test.html
+++ b/test.html
@@ -5,8 +5,19 @@
     <title></title>
 </head>
 <body>
-<script>
+a
+b
+c     c
+d
+e
+f
+<pre>
+a &lt;b>asdf&lt;/b>
+    b     c
+c
+d
+e
+</pre>
 
-</script>
 </body>
 </html>
